# C_LAN_Chatroom

./: .gitignore  CMakeLists.txt  Instructions.txt  Kbuild.in  MakeFileForChatApp  Makefile_for_chat  Sockets.h  app_delete.sh  app_init.sh  chat_database_kernel.c  chat_device.c  delete.sh  init.sh  main.c  run.sh  run_app.sh  run_device_create.sh  simpleChatAppToTest.c
Makefiles/: Makefile  Makefile.char_device  Makefile.chat_app
src/: char_device.c  char_device.h  chat_device.c  main.c  main.h  model.h  network.c  network.h
